Fri Aug  2 18:33:47 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcluehunter.[hc]: copy and update clue hunter code from
	GLE. added ::poll_refresh signal to update clue hunter contents.

	* beast-gtk/bstparam.c: update clue hunter code to use BstClueHunter.
	feature bsw_item_list_proxies() procedure for OBJECT properties.

Tue Jul 30 01:44:02 2002  Tim Janik  <timj@gtk.org>

	* docs/generated/release-notes.dat: updates.

	* beast-gtk/bstplayback.[hc]: export API for seeking.

	* beast-gtk/bstwaveeditor.[hc]: add seek scale.

Sat Jul 27 19:10:36 2002  Tim Janik  <timj@gtk.org>

	* configure.in (BST_RELEASE_CANDIDATE): feature release candidate
	appendix.

	* bsw-shell/Makefile.am (public_scripts): don't install test.scm.

	* bsw/Makefile.am: fix build rules for massive parallel
	builds. fix clean rules.

	* Makefile.am: fix gsl -> bse link.

	* configure.in: error out if guile is missing.

	* beast-gtk/Makefile.am: add missing files.

	* beast-gtk/bstpartdialog.c: nuke wrong include.

	* beast-gtk/icons/Makefile.am: fix build rules.

	* beast-gtk/images/Makefile.am: add missing files.

	* bsw/Makefile.am: add -I., fix build rules.

	* bsw/mkapi.c: fix generated includes.

	* bsw-shell/Makefile.am: add -I., add missing files.
	scm glue is now kept in bsw-scm-glue.boot.

	* docs/Makefile.am: nuke outdated files from EXTRA_DIST.

	* docs/reference/Makefile.am: fix build rules.

Sat Jul 27 13:30:39 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c (bst_parse_args): add --print-path option
	to print a path to stdout on demand, print help and version to
	stdout (not stderr).

	* beast-gtk/images/: new directory containing images.
	added excellent images (logo, splash, mime-type, etc.) from
	Jakub Steiner.

	* NEWS: updates.

	* configure.in: provide BST_VERSION_STABLE and BST_PATH_IMAGES,
	fix BST_PATH_SAMPLES. upgrade version hint from Pre-ALPHA to ALPHA.

	* beast-gtk/bstsplash.[hc]: splash dialog implementation.
